gitops/apps/rancher/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rancher
  labels:
    name: rancher
