gitops/apps/rancher/rancher-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: http   # listener name on the Gateway
  hostnames:
    - "rancher.vps.kubespaces.cloud"  # Change this to your actual domain
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rancher-rancher
          port: 80
